fix database service