@@ -2,14 +2,12 @@ package com.usth.edu.vn.repository;
 
 import com.speedment.jpastreamer.application.JPAStreamer;
 import com.usth.edu.vn.model.UserDetails;
-import com.usth.edu.vn.model.UserDetails$;
 import io.quarkus.hibernate.orm.panache.PanacheRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class UserDetailsRepository implements PanacheRepository<UserDetails> {
@@ -17,11 +15,26 @@ public class UserDetailsRepository implements PanacheRepository<UserDetails> {
     @Inject
     JPAStreamer jpaStreamer;
 
+    @Inject
+    UserRepository userRepository;
+
     private static final int PAGE_SIZE = 20;
 
     public List<UserDetails> findAllUsers() {
         return jpaStreamer.stream(UserDetails.class)
                 .toList();
+    }
+
+    public UserDetails getUserDetail(long user_id) {
+      UserDetails userDetail = userRepository.findById(user_id).getUserDetails();
+      UserDetails tempUserDetail = UserDetails
+        .builder()
+        .firstname(userDetail.getFirstname())
+        .lastname(userDetail.getLastname())
+        .email(userDetail.getEmail())
+        .createTime(userDetail.getCreateTime())
+        .build();
+      return tempUserDetail;
     }
 
     public List<UserDetails> findPagingUsers(long pageNo) {
@@ -32,15 +45,12 @@ public class UserDetailsRepository implements PanacheRepository<UserDetails> {
     }
 
     public List<UserDetails> searchUsers(String keyWord) {
-        return jpaStreamer.stream(UserDetails.class)
-                .toList()
-                .stream()
-                .filter(UserDetails$.firstname.startsWith(keyWord)
-                        .or(UserDetails$.lastname.startsWith(keyWord))
-                        .or(UserDetails$.email.startsWith(keyWord))
-                        .or(userDetails$ -> userDetails$.getUsers().getUsername().startsWith(keyWord)))
-                .sorted(UserDetails$.firstname
-                        .thenComparing(UserDetails$.lastname.comparator()))
-                .collect(Collectors.toList());
+      return streamAll().filter(userDetail -> 
+          userDetail.getFirstname().startsWith(keyWord) ||
+          userDetail.getLastname().startsWith(keyWord) ||
+          userDetail.getEmail().startsWith(keyWord) ||
+          userDetail.getUser().getUsername().startsWith(keyWord))
+        .sorted(Comparator.comparing(UserDetails::getFirstname).thenComparing(UserDetails::getLastname))
+        .toList();
     }
 }
